Correction code version Mobile

--- a/style.css
+++ b/style.css
@@ -308,7 +308,7 @@ h3 {
     }
 
     .asi_heb_left {
-        width: 90%;
+        width: 100%;
     }
 
     .sec_heb_font {
@@ -322,11 +322,14 @@ h3 {
         margin-bottom: 50px;
     }
     .div_heb_result {
-        width: 80%;
+        width: 97%;
     }
     .div_heb_pop {
         max-width: 96%;
         margin-left: 1%;
+    }
+    .img_heb_pop {
+        max-height: 150px;
     }
     /* } */
 
@@ -418,7 +421,7 @@ h3 {
     }
     .div_heb_pop {
         width: 100%;
-        height: 23%;
+        height: 25%;
     }
     .a_heb_pop {
         height: auto;
@@ -426,7 +429,7 @@ h3 {
     }
 
     .img_activite {
-        max-height: 400px;
+        max-height: 180px;
     }
 
     .div_filtre {
